--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" routerLink="/">
-                <i class="bi bi-building"></i>
-                {{ title }}
+                <img alt="il logo di eurobet" title="logo eurobet" id="123" class="header__logo--desktop" src="https://images.eurobet.it/images/static/brand/Eurobet-logo-light.svg" width="186" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,16 +82,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <p class="mb-0">
-                        <i class="bi bi-building"></i>
-                        <strong>{{ title }}</strong>
+                        <img title="logo group Entain" alt="immagine logo group Entain" class="footer__certfication" src="//images.eurobet.it/images/static/footer/entain.png" height="35" width="38">
                     </p>
                     <p class="text-muted small mb-0">
-                        Sistema di gestione prenotazioni postazioni di lavoro
+                        Codice fiscale e partita IVA: 03620640106 – Concessione GAD n. 15016 – Società soggetta a direzione e coordinamento di Entain PLC.
                     </p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p class="mb-0 text-muted small">
-                        © {{ currentYear }} Company. Tutti i diritti riservati.
+                        © {{ currentYear }} Eurobet Italia s.r.l. Tutti i diritti riservati.
                     </p>
                     <p class="mb-0 text-muted small">
                         Versione 1.0.0
