--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
           Sistema di Prenotazione Postazioni
         </h1>
         <p class="hero-subtitle">
-          Prenota la tua postazione di lavoro in modo semplice e veloce
+          Sede di Roma, Lungotevere Arnaldo da Brescia 12, 00196
         </p>
         <div class="hero-actions">
           <a routerLink="/booking" class="btn btn-primary btn-lg">
