--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,8 @@
   min-height: 100vh;
 
   .navbar {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important;
+    //background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important;
+    background-color: #243561 !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 1rem 0;
 
@@ -136,7 +137,7 @@
 
     i {
       margin-right: 0.5rem;
-      color: #3498db;
+      color: #243561;
     }
 
     .text-muted {
